[tool.poetry]
name = "pytorch-partial-crf"
version = "0.2.0"
description = ""
authors = ["Koga Kobayashi"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
