[metadata]
name = pytorch-partial-crf
version = attr:pytorch_partial_crf.__version__
author = Koga Kobayashi
author_email = kajyuuen@gmail.com
description = Partial/Fuzzy Conditional random field in PyTorch
long_description = file:README.md
url = https://github.com/kajyuuen/pytorch-partial-crf
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find:
