[metadata]
name = pytorch-partial-crf
version = attr:pytorch_partial_crf.__version__
author = Koga Kobayashi
author_email = kajyuuen@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
description = "Partial/Fuzzy Conditional random field in PyTorch."
url = https://github.com/kajyuuen/pytorch-partial-crf
license_file = LICENSE.txt
classifier =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
install_requires = torch
zip_safe = False
packages = find:
